# HamRobot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: dashscope_fun_asr.md
hamrobot/: __init__.py  app.py  cli.py  config.py
hamrobot/asr/: base.py  engines.py
hamrobot/audio/: device.py  segmenter.py
hamrobot/dialog/: manager.py
hamrobot/llm/: base.py  deepseek.py
hamrobot/radio/: audio2rig.py  ptt.py
hamrobot/tts/: base.py  engines.py
hamrobot/utils/: audio.py  logging.py
scripts/: run_dummy_demo.sh
tests/: test_audio_utils.py  test_dialog.py
